v0.6.6

v0.6.5 (26.3.21)
- cancel export if a mesh and a bone share the same name and mesh is not configured properly
- inform user if both vertex bone weights do not add up to 100%
- Bugfix: handling of specular and emission color
- Bugfix: use proper file extension for loaded textures
- Bugfix: split vertices with n uv-coords into n vertices

v0.6.4 (23.2.21)
- support mesh property 'two sided'
- cancel export if vertices are not rigged to any bone
- cancel export if vertices are rigged to more than 2 bones
- added vertex material info mapping attributes
- Bugfix: uv corrdinates are correct for meshes where invalid triangles are removed on import
- Bugfix: no negative values for bounding box extend
- Bugfix: proper vertex material args handling
- Bugfix: normalize quaternions on animation export

v0.6.3 (17.1.20)
- geometry data can now be exported to xml and ini

v0.6.2 (01.12.20)
- support for floats in xml files with ',' and '.'
- support more collision box properties (type, collision_type)

v0.6.0 (28.7.20)
- export dummy shade indices (they are needed for the mod SDK (at least for W3X))
- support for mesh sorting levels
- only display appropriate custom object properties
- support mesh flags 'cast_shadow', 'camera oriented' and 'camera aligned'
- import prelit vertex material as basic vertex material for now
- support for per face surface types via face maps
- added support for vertex colors
- Bugfix: fix import of visibility channels of armature
- Bugfix: handle multiple hlod, hierarchy and animation chunks
- Bugfix: fix export when bones are not in tree order
- Bugfix: fix export of time coded animations
- Bugfix: set hierarchy name always uppercase

v0.5.0 (10.06.20)
- use proper enums for vertex material shader properties
- create pivots for meshes on export if they have no parent bone
- create a bone for each hierarchy pivot on import (otherwise pivot order can not be maintained on roundtrip)
- reduced export time for meshes (O(n*n) -> O(n))